<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
    />
    <EditText
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"

    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
    />
    <EditText
            android:id="@+id/descriptionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
    />
    <RadioGroup
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/radioEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn1_text"
                android:checked="true"
        />
        <RadioButton
                android:id="@+id/radioChi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn2_text"
        />
        <RadioButton
                android:id="@+id/radioMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn3_text"
        />
        <RadioButton
                android:id="@+id/radioTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn4_text"
        />
    </RadioGroup>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/releasedate"
    />
    <EditText
            android:id="@+id/releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_releasedate"
    />
    <CheckBox
            android:id="@+id/firstCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chkBox1_text"
    />
            <!--android:onClick="chkCheckBox"-->

    <LinearLayout
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/chkBox2_text"
                android:visibility="gone"
                android:checked="false"

        />
        <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/chkBox3_text"
                android:visibility="gone"
                android:checked="false"

        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/addMovieBtn"
                android:text="@string/button_text"
                android:onClick="addMovieBtn"

        />

    </LinearLayout>
</LinearLayout>