<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/musd_image"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieTitle"
    />

    <TextView
            android:id="@+id/mTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"

    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieOverview"
    />

    <TextView
            android:id="@+id/mOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />
    <!-- should use sp for textSize and not dp -->


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieLanguage"
    />

    <TextView
            android:id="@+id/mLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieReleaseDate"
    />

    <TextView
            android:id="@+id/mReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieSuitability"
    />

    <TextView
            android:id="@+id/mSuitability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />


</LinearLayout>